WIP: optimize day 9